# daxb

./: .gitignore  pyproject.toml
api/: .gitignore  README.md  main.py  mkdocs.yml
api/database/: database.py  models.py  schemas.py
api/dependencies/: customer.py
api/middleware/: customer.py
api/routers/: audio.py  cookie.py  fila.py  pacient.py  proximo.py  room.py
api/templates/: main.html  rooms.html
