[project]
name = "daxb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "murf>=1.2.2",
    "punq>=0.7.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
